// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly handle opening/closing accordions: 2nd opened 1`] = `
<Fragment>
  <div
    className="overflow-hidden spacer-bottom"
  >
    <ButtonLink
      className="pull-right"
      onClick={[Function]}
    >
      collapse_all
    </ButtonLink>
  </div>
  <BitbucketProjectAccordion
    disableRepositories={false}
    key="project"
    onClick={[Function]}
    onSelectRepository={[MockFunction]}
    open={true}
    project={
      Object {
        "id": 1,
        "key": "project",
        "name": "Project",
      }
    }
    repositories={
      Array [
        Object {
          "id": 1,
          "name": "Repo",
          "projectKey": "project",
          "slug": "project__repo",
        },
        Object {
          "id": 2,
          "name": "Bar",
          "projectKey": "project",
          "slug": "bar",
          "sqProjectKey": "bar",
        },
      ]
    }
    showingAllRepositories={true}
  />
  <BitbucketProjectAccordion
    disableRepositories={false}
    key="project2"
    onClick={[Function]}
    onSelectRepository={[MockFunction]}
    open={true}
    project={
      Object {
        "id": 2,
        "key": "project2",
        "name": "Project 2",
      }
    }
    repositories={Array []}
  />
</Fragment>
`;

exports[`should render correctly: default 1`] = `
<Fragment>
  <div
    className="overflow-hidden spacer-bottom"
  >
    <ButtonLink
      className="pull-right"
      onClick={[Function]}
    >
      expand_all
    </ButtonLink>
  </div>
  <BitbucketProjectAccordion
    disableRepositories={false}
    key="project"
    onClick={[Function]}
    onSelectRepository={[MockFunction]}
    open={true}
    project={
      Object {
        "id": 1,
        "key": "project",
        "name": "Project",
      }
    }
    repositories={
      Array [
        Object {
          "id": 1,
          "name": "Repo",
          "projectKey": "project",
          "slug": "project__repo",
        },
        Object {
          "id": 2,
          "name": "Bar",
          "projectKey": "project",
          "slug": "bar",
          "sqProjectKey": "bar",
        },
      ]
    }
    showingAllRepositories={true}
  />
  <BitbucketProjectAccordion
    disableRepositories={false}
    key="project2"
    onClick={[Function]}
    onSelectRepository={[MockFunction]}
    open={false}
    project={
      Object {
        "id": 2,
        "key": "project2",
        "name": "Project 2",
      }
    }
    repositories={Array []}
  />
</Fragment>
`;

exports[`should render correctly: no repos 1`] = `
<Fragment>
  <div
    className="overflow-hidden spacer-bottom"
  >
    <ButtonLink
      className="pull-right"
      onClick={[Function]}
    >
      expand_all
    </ButtonLink>
  </div>
  <BitbucketProjectAccordion
    disableRepositories={false}
    key="project"
    onClick={[Function]}
    onSelectRepository={[MockFunction]}
    open={true}
    project={
      Object {
        "id": 1,
        "key": "project",
        "name": "Project",
      }
    }
    repositories={Array []}
  />
  <BitbucketProjectAccordion
    disableRepositories={false}
    key="project2"
    onClick={[Function]}
    onSelectRepository={[MockFunction]}
    open={false}
    project={
      Object {
        "id": 2,
        "key": "project2",
        "name": "Project 2",
      }
    }
    repositories={Array []}
  />
</Fragment>
`;

exports[`should render correctly: selected repo 1`] = `
<Fragment>
  <div
    className="overflow-hidden spacer-bottom"
  >
    <ButtonLink
      className="pull-right"
      onClick={[Function]}
    >
      expand_all
    </ButtonLink>
  </div>
  <BitbucketProjectAccordion
    disableRepositories={false}
    key="project"
    onClick={[Function]}
    onSelectRepository={[MockFunction]}
    open={true}
    project={
      Object {
        "id": 1,
        "key": "project",
        "name": "Project",
      }
    }
    repositories={
      Array [
        Object {
          "id": 1,
          "name": "Repo",
          "projectKey": "project",
          "slug": "project__repo",
        },
        Object {
          "id": 2,
          "name": "Bar",
          "projectKey": "project",
          "slug": "bar",
          "sqProjectKey": "bar",
        },
      ]
    }
    selectedRepository={
      Object {
        "id": 1,
        "name": "Repo",
        "projectKey": "project",
        "slug": "project__repo",
      }
    }
    showingAllRepositories={true}
  />
  <BitbucketProjectAccordion
    disableRepositories={false}
    key="project2"
    onClick={[Function]}
    onSelectRepository={[MockFunction]}
    open={false}
    project={
      Object {
        "id": 2,
        "key": "project2",
        "name": "Project 2",
      }
    }
    repositories={Array []}
    selectedRepository={
      Object {
        "id": 1,
        "name": "Repo",
        "projectKey": "project",
        "slug": "project__repo",
      }
    }
  />
</Fragment>
`;
